--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,6 +3,7 @@ packages:
   - examples/*
 
 overrides:
+  '@isaacs/brace-expansion@<=5.0.0': '>=5.0.1'
   glob@>=10.2.0 <10.5.0: '>=10.5.0'
   js-yaml@>=4.0.0 <4.1.1: '>=4.1.1'
   koa@>=2.16.2 <2.16.3: '>=2.16.3'
