--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "verify-version": "./scripts/verify-version.sh"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.3.10",
+    "@biomejs/biome": "^2.3.14",
     "lefthook": "^2.1.0",
     "npm-check-updates": "^19.3.2",
     "syncpack": "^13.0.4",
