--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -9,3 +9,4 @@ overrides:
   koa@>=2.16.2 <2.16.3: '>=2.16.3'
   vite@>=6.0.0 <=6.3.5: '>=6.3.6'
   vite@>=6.0.0 <=6.4.0: '>=6.4.1'
+  webpack@>=5.49.0 <=5.104.0: '>=5.104.1'
