--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,17 +4,18 @@ packages:
 
 overrides:
   '@isaacs/brace-expansion@<=5.0.0': '>=5.0.1'
-  ajv@>=7.0.0-alpha.0 <8.18.0: '>=8.18.0'
-  glob@>=10.2.0 <10.5.0: '>=10.5.0'
-  js-yaml@>=4.0.0 <4.1.1: '>=4.1.1'
-  koa@>=2.16.2 <2.16.3: '>=2.16.3'
-  koa@>=3.0.0 <3.1.2: '>=3.1.2'
-  minimatch@>=10.0.0 <10.2.1: '>=10.2.1'
-  minimatch@>=10.0.0 <10.2.3: '>=10.2.3'
-  minimatch@>=9.0.0 <9.0.6: '>=9.0.6'
-  minimatch@>=9.0.0 <9.0.7: '>=9.0.7'
-  rollup@>=3.0.0 <3.30.0: '>=3.30.0'
-  rollup@>=4.0.0 <4.59.0: '>=4.59.0'
-  vite@>=6.0.0 <=6.3.5: '>=6.3.6'
-  vite@>=6.0.0 <=6.4.0: '>=6.4.1'
-  webpack@>=5.49.0 <=5.104.0: '>=5.104.1'
+  'glob@>=10.2.0 <10.5.0': '>=10.5.0'
+  'js-yaml@>=4.0.0 <4.1.1': '>=4.1.1'
+  'koa@<2.16.4': '>=2.16.4'
+  'koa@>=3.0.0 <3.1.2': '>=3.1.2'
+  'minimatch@<3.1.3': '>=3.1.3'
+  'minimatch@>=10.0.0 <10.2.1': '>=10.2.1'
+  'minimatch@>=4.0.0 <4.2.4': '>=4.2.4'
+  'minimatch@>=5.0.0 <5.1.7': '>=5.1.7'
+  'minimatch@>=6.0.0 <6.2.1': '>=6.2.1'
+  'minimatch@>=7.0.0 <7.4.7': '>=7.4.7'
+  'minimatch@>=8.0.0 <8.0.5': '>=8.0.5'
+  'minimatch@>=9.0.0 <9.0.6': '>=9.0.6'
+  'vite@>=6.0.0 <=6.3.5': '>=6.3.6'
+  'vite@>=6.0.0 <=6.4.0': '>=6.4.1'
+  'webpack@>=5.49.0 <=5.104.0': '>=5.104.1'
