Fix audit vulnerabilities and update deps

--- a/packages/build-clean/package.json
+++ b/packages/build-clean/package.json
@@ -127,9 +127,9 @@
       }
     }
   },
-  "main": "dist/cjs/index.cjs",
-  "module": "dist/esm/index.js",
-  "types": "dist/esm/index.d.ts",
+  "main": "./dist/cjs/index.cjs",
+  "module": "./dist/esm/index.js",
+  "types": "./dist/esm/index.d.ts",
   "typesVersions": {
     "*": {
       "index": [
@@ -208,7 +208,7 @@
   "devDependencies": {
     "@nuxt/kit": "^4.3.1",
     "@tsconfig/node22": "^22.0.5",
-    "@types/node": "^25.2.2",
+    "@types/node": "^25.3.2",
     "terser": "^5.46.0",
     "tsup": "^8.5.1",
     "typescript": "^5.9.3"
